--- a/index.html
+++ b/index.html
@@ -1,6 +1,10 @@
-<html>
-  <head></head>
+<!DOCTYPE html>
+<html lang="en" dir="ltr">
+  <head>
+    <meta charset="utf-8">
+    <title>Hello Me!</title>
+  </head>
   <body>
-    <p>Hello, World!</p>
+
   </body>
 </html>
