--- a/index.html
+++ b/index.html
@@ -2,15 +2,29 @@
 <html lang="en" dir="ltr">
   <head>
     <meta charset="utf-8">
-    <title>Hello Me!</title>
+    <title>Pinyon Jay Encyclopedia</title>
   </head>
   <body>
+    <h1>Pinyon Jay</h1>
+    <img scr="img/pinyonJay.jpg" alt="Pinyon Jay" width = 400>
+    <p>The pinyon jay (Gymnorhinus cyanocephalus) is a jay between the North American blue jay and the Eurasian jay in size. The voice is described as a rhythmic krawk-kraw-krawk repeated two or three times. It is the only member of the genus Gymnorhinus. Its overall proportions are very nutcracker-like and indeed this can be seen as convergent evolution as both birds fill similar ecological niches. The pinyon jay is a bluish-grey coloured bird with deeper head colouring and whitish throat with black bill, legs and feet.</p>
+    <h2>Contents</h2>
+    <ol>
+      <li><a href="Taxonomy"><h3>Taxonomy</h3></li>
+      <li><a href="DistributionandHabitat"><h3>Distribution and Habitat</h3></li>
+      <li><a href="Behavior"><h3>Behavior</h3></li>
+      <li><a href="FoodHabits"><h3>Food Habits</h3></li>
+      <li><a href="Status"><h3>Status</h3></li>
+    </ol>
 
-  <h1>Tor Erik Brown</h1>
-  <h2>Pronouns: he, him, his</h2>
-  <p><b>Goals:</b> By the end of the course I would love to have a website that could serve as a home for my portfolio.</p>
-  <p> I grew up in Eagle CO, my major is ENVD with an emphasis in architecture. I am also a CTD minor and a Buisness minor.</p>
-  <p><img src="img/sky.jpg" alt="pretty sky"></p>
-  <p><a href="https://youtu.be/I-sH53vXP2A">video</a></p>
+    <h2 id="Taxonomy">Taxonomy</h2>
+
+    <p>The pinyon jay was described by German explorer Prince Maximilian of Wied-Neuwied in 1841, from a specimen shot along the Maria River in Northern Montana during his expedition to the Interior of North America in 1833.
+    It is the sole member of the genus Gymnorhinus. No subspecies are recognised.</p>
+    <p> Genetic analysis suggests that the pinyon jay is an offshoot from a lineage that gave rise to the scrub-jays and relatives (Aphelocoma) and Cyanocitta (blue jay and Steller's jay).
+    The International Ornithologists' Union has designated "pinyon jay" the official common name for the species. It was historically known as the blue crow or Maximilian's jay</p>
+
+
+
   </body>
 </html>
