--- a/assignment3.html
+++ b/assignment3.html
@@ -15,14 +15,14 @@
       <li><a href="#Behavior"><h3>Behavior</h3></a></li>
       <li><a href="#FoodHabits"><h3>Food Habits</h3></a></li>
       <li><a href="#Status"><h3>Status</h3></a></li>
-      <li><a href="#Extra"><h3>Extra</h3></a></li>
-    </ol>
+      <li><a href="#Extra"><h3>Extra</h3></a>
         <ul>
           <li><a href="#OtherStudentProjects"><h3>See Also...</h3></a></li>
           <li><a href="#Sources"><h3>Sources</h3></a></li>
           <li><a href="#more"><h3>More on Pinyon Jays</h3></a></li>
         </ul>
-
+      </li>
+    </ol>
 
     <h2 id="Taxonomy">Taxonomy</h2>
 
