--- a/assignment4.html
+++ b/assignment4.html
@@ -4,102 +4,143 @@
     <meta charset="utf-8">
     <title>Assignment 4</title>
     <style type="text/css">
-    .tg  {border-collapse:collapse;border-spacing:0;border-color:black;border-style: none;border-width: 5}
-    .tg td{border-color:black;border-style:solid;border-width:1px;font-family:Arial, sans-serif;font-size:50px;
+    .tg  {border-collapse:collapse;border-spacing:0;border-color:black;border-style:solid;border-width: 5px}
+    .tg td{border-color:black;border-style:solid;border-width:0px;font-family:Arial, sans-serif;font-size:40px;
       overflow:hidden;padding:10px 5px;word-break:normal;height:50px;width:50px}
-    .tg th{border-color:black;border-style:solid;border-width:1px;font-family:Arial, sans-serif;font-size:50px;
+    .tg th{border-color:black;border-style:solid;border-width:0px;font-family:Arial, sans-serif;font-size:40px;
       font-weight:normal;overflow:hidden;padding:10px 5px;word-break:normal;height:50px;width:50px}
     .tg .tg-0x09{background-color:#9b9b9b;text-align:left;vertical-align:top}
     .tg .tg-0lax{text-align:left;vertical-align:top}
-
-
     </style>
   </head>
-  <h1>Assignment 4</h1>
   <body>
-    <table class="tg">
-  <thead>
-    <tr>
-      <th class="tg-0lax">&#9812;</th>
-      <th class="tg-0x09"></th>
-      <th class="tg-0lax"></th>
-      <th class="tg-0x09"></th>
-      <th class="tg-0lax"></th>
-      <th class="tg-0x09"></th>
-      <th class="tg-0lax"></th>
-      <th class="tg-0x09"></th>
-    </tr>
-  </thead>
-  <tbody>
-    <tr>
-      <td class="tg-0x09"></td>
-      <td class="tg-0lax"></td>
-      <td class="tg-0x09"></td>
-      <td class="tg-0lax"></td>
-      <td class="tg-0x09"></td>
-      <td class="tg-0lax"></td>
-      <td class="tg-0x09"></td>
-      <td class="tg-0lax"></td>
-    </tr>
-    <tr>
-      <td class="tg-0lax"></td>
-      <td class="tg-0x09"></td>
-      <td class="tg-0lax"></td>
-      <td class="tg-0x09"></td>
-      <td class="tg-0lax"></td>
-      <td class="tg-0x09"></td>
-      <td class="tg-0lax"></td>
-      <td class="tg-0x09"></td>
-    </tr>
-    <tr>
-      <td class="tg-0x09"></td>
-      <td class="tg-0lax"></td>
-      <td class="tg-0x09"></td>
-      <td class="tg-0lax"></td>
-      <td class="tg-0x09"></td>
-      <td class="tg-0lax"></td>
-      <td class="tg-0x09"></td>
-      <td class="tg-0lax"></td>
-    </tr>
-    <tr>
-      <td class="tg-0lax"></td>
-      <td class="tg-0x09"></td>
-      <td class="tg-0lax"></td>
-      <td class="tg-0x09"></td>
-      <td class="tg-0lax"></td>
-      <td class="tg-0x09"></td>
-      <td class="tg-0lax"></td>
-      <td class="tg-0x09"></td>
-    </tr>
-    <tr>
-      <td class="tg-0x09"></td>
-      <td class="tg-0lax"></td>
-      <td class="tg-0x09"></td>
-      <td class="tg-0lax"></td>
-      <td class="tg-0x09"></td>
-      <td class="tg-0lax"></td>
-      <td class="tg-0x09"></td>
-      <td class="tg-0lax"></td>
-    </tr>
-    <tr>
-      <td class="tg-0lax"></td>
-      <td class="tg-0x09"></td>
-      <td class="tg-0lax"></td>
-      <td class="tg-0x09"></td>
-      <td class="tg-0lax"></td>
-      <td class="tg-0x09"></td>
-      <td class="tg-0lax"></td>
-      <td class="tg-0x09"></td>
-    </tr>
-    <tr>
-      <td class="tg-0x09"></td>
-      <td class="tg-0lax"></td>
-      <td class="tg-0x09"></td>
-      <td class="tg-0lax"></td>
-      <td class="tg-0x09"></td>
-      <td class="tg-0lax"></td>
-      <td class="tg-0x09"></td>
-      <td class="tg-0lax"></td>
-    </tr>
-  </tbody>
-  </table>
+    <h1>Assignment 4</h1>
+      <h2>Table of Contents</h2>
+      <ol>
+        <li><a href="#Challenge2"><h3>Challenge 2: Build a Chessboard</h3></a></li>
+        <li><a href="#Challenge3"><h3>Challenge 3: Create a Form</h3></a></li>
+        <li><a href="#Challenge4"><h3>Challenge 4: A Google Search Page</h3></a></li>
+        <li><a href="#Challenge5"><h3>Challenge 5: Accessibility Concerns</h3></a></li>
+      </ol>
+
+    <h2 id="Challenge2">Challenge 2: Build a Chessboard</h2>
+      <table class="tg">
+    <thead>
+      <tr>
+        <th class="tg-0lax">&#9814;</th>
+        <th class="tg-0x09">&#9816;</th>
+        <th class="tg-0lax">&#9815;</th>
+        <th class="tg-0x09">&#9812;</th>
+        <th class="tg-0lax">&#9813;</th>
+        <th class="tg-0x09">&#9815;</th>
+        <th class="tg-0lax">&#9816;</th>
+        <th class="tg-0x09">&#9814;</th>
+      </tr>
+    </thead>
+    <tbody>
+      <tr>
+        <td class="tg-0x09">&#9817;</td>
+        <td class="tg-0lax">&#9817;</td>
+        <td class="tg-0x09">&#9817;</td>
+        <td class="tg-0lax">&#9817;</td>
+        <td class="tg-0x09">&#9817;</td>
+        <td class="tg-0lax">&#9817;</td>
+        <td class="tg-0x09">&#9817;</td>
+        <td class="tg-0lax">&#9817;</td>
+      </tr>
+      <tr>
+        <td class="tg-0lax"></td>
+        <td class="tg-0x09"></td>
+        <td class="tg-0lax"></td>
+        <td class="tg-0x09"></td>
+        <td class="tg-0lax"></td>
+        <td class="tg-0x09"></td>
+        <td class="tg-0lax"></td>
+        <td class="tg-0x09"></td>
+      </tr>
+      <tr>
+        <td class="tg-0x09"></td>
+        <td class="tg-0lax"></td>
+        <td class="tg-0x09"></td>
+        <td class="tg-0lax"></td>
+        <td class="tg-0x09"></td>
+        <td class="tg-0lax"></td>
+        <td class="tg-0x09"></td>
+        <td class="tg-0lax"></td>
+      </tr>
+      <tr>
+        <td class="tg-0lax"></td>
+        <td class="tg-0x09"></td>
+        <td class="tg-0lax"></td>
+        <td class="tg-0x09"></td>
+        <td class="tg-0lax"></td>
+        <td class="tg-0x09"></td>
+        <td class="tg-0lax"></td>
+        <td class="tg-0x09"></td>
+      </tr>
+      <tr>
+        <td class="tg-0x09"></td>
+        <td class="tg-0lax"></td>
+        <td class="tg-0x09"></td>
+        <td class="tg-0lax"></td>
+        <td class="tg-0x09"></td>
+        <td class="tg-0lax"></td>
+        <td class="tg-0x09"></td>
+        <td class="tg-0lax"></td>
+      </tr>
+      <tr>
+        <td class="tg-0lax">&#9823;</td>
+        <td class="tg-0x09">&#9823;</td>
+        <td class="tg-0lax">&#9823;</td>
+        <td class="tg-0x09">&#9823;</td>
+        <td class="tg-0lax">&#9823;</td>
+        <td class="tg-0x09">&#9823;</td>
+        <td class="tg-0lax">&#9823;</td>
+        <td class="tg-0x09">&#9823;</td>
+      </tr>
+      <tr>
+        <td class="tg-0x09">&#9820;</td>
+        <td class="tg-0lax">&#9822;</td>
+        <td class="tg-0x09">&#9821;</td>
+        <td class="tg-0lax">&#9818;</td>
+        <td class="tg-0x09">&#9819;</td>
+        <td class="tg-0lax">&#9821;</td>
+        <td class="tg-0x09">&#9822;</td>
+        <td class="tg-0lax">&#9820;</td>
+      </tr>
+    </tbody>
+    </table>
+      <h2 id="Challenge3">Challenge 3: Create a Form</h2>
+        <form>
+          <div>
+            <label><b>Name:</b></label><br>
+            <input>
+          </div>
+          <div>
+            <label><b>State you're from:</b></label><br>
+            <input>
+          </div>
+          <div>
+            <label for="date"><b>Birthdate:</b></label><br>
+            <input type="date" name="date" id="date" min="2022-02-06">
+          </div>
+          Is this the best website you've ever seen?
+          <div>
+            <label for="yes">Yes</label>
+            <input type="checkbox" name="Yes" id="yes">
+          </div>
+          <div>
+            <label for="Definitely">Definitely</label>
+            <input type="checkbox" name="Definitely" id="Definitely">
+          </div>
+          <div>
+            <label for="WOAD">With out a doubt</label>
+            <input type="checkbox" name="WOAD" id="WOAD">
+          </div>
+          <div>
+          <button type="Submit">Submit</button>
+          </div>
+        </form>
+      <h2 id="Challenge4">Challenge 4: A Google Search Page</h2>
+      <h2 id="Challenge5">Challenge 5: Accessibility Concerns</h2>
+        <p>Challenges two and three both pose problems to the visually impaired. I think I could address the issues posed by these components by creating a screen reader-friendly website. Meaning I would use alternate text to describe each of the parts in enough detail to communicate their function or appearance. The issues posed by these components could easily be addressed with alternate text. A simple, minimal effort, solution, that would improve accessibility greatly.</p>
