--- a/assignment4.html
+++ b/assignment4.html
@@ -6,11 +6,11 @@
     <style type="text/css">
     .tg  {border-collapse:collapse;border-spacing:0;border-color:black;border-style:solid;border-width: 5px}
     .tg td{border-color:black;border-style:solid;border-width:0px;font-family:Arial, sans-serif;font-size:40px;
-      overflow:hidden;padding:10px 5px;word-break:normal;height:50px;width:50px}
+      overflow:hidden;padding:10px 5px;word-break:normal;height:50px;width:55px}
     .tg th{border-color:black;border-style:solid;border-width:0px;font-family:Arial, sans-serif;font-size:40px;
-      font-weight:normal;overflow:hidden;padding:10px 5px;word-break:normal;height:50px;width:50px}
-    .tg .tg-0x09{background-color:#9b9b9b;text-align:left;vertical-align:top}
-    .tg .tg-0lax{text-align:left;vertical-align:top}
+      font-weight:normal;overflow:hidden;padding:10px 5px;word-break:normal;height:50px;width:55px}
+    .tg .tg-0x09{background-color:#9b9b9b;text-align:center;vertical-align:center}
+    .tg .tg-0lax{text-align:center;vertical-align:center}
     </style>
   </head>
   <body>
@@ -49,44 +49,44 @@
         <td class="tg-0lax">&#9817;</td>
       </tr>
       <tr>
-        <td class="tg-0lax"></td>
-        <td class="tg-0x09"></td>
-        <td class="tg-0lax"></td>
-        <td class="tg-0x09"></td>
-        <td class="tg-0lax"></td>
-        <td class="tg-0x09"></td>
-        <td class="tg-0lax"></td>
-        <td class="tg-0x09"></td>
+        <td class="tg-0lax">&#160;</td>
+        <td class="tg-0x09">&#160;</td>
+        <td class="tg-0lax">&#160;</td>
+        <td class="tg-0x09">&#160;</td>
+        <td class="tg-0lax">&#160;</td>
+        <td class="tg-0x09">&#160;</td>
+        <td class="tg-0lax">&#160;</td>
+        <td class="tg-0x09">&#160;</td>
       </tr>
       <tr>
-        <td class="tg-0x09"></td>
-        <td class="tg-0lax"></td>
-        <td class="tg-0x09"></td>
-        <td class="tg-0lax"></td>
-        <td class="tg-0x09"></td>
-        <td class="tg-0lax"></td>
-        <td class="tg-0x09"></td>
-        <td class="tg-0lax"></td>
+        <td class="tg-0x09">&#160;</td>
+        <td class="tg-0lax">&#160;</td>
+        <td class="tg-0x09">&#160;</td>
+        <td class="tg-0lax">&#160;</td>
+        <td class="tg-0x09">&#160;</td>
+        <td class="tg-0lax">&#160;</td>
+        <td class="tg-0x09">&#160;</td>
+        <td class="tg-0lax">&#160;</td>
       </tr>
       <tr>
-        <td class="tg-0lax"></td>
-        <td class="tg-0x09"></td>
-        <td class="tg-0lax"></td>
-        <td class="tg-0x09"></td>
-        <td class="tg-0lax"></td>
-        <td class="tg-0x09"></td>
-        <td class="tg-0lax"></td>
-        <td class="tg-0x09"></td>
+        <td class="tg-0lax">&#160;</td>
+        <td class="tg-0x09">&#160;</td>
+        <td class="tg-0lax">&#160;</td>
+        <td class="tg-0x09">&#160;</td>
+        <td class="tg-0lax">&#160;</td>
+        <td class="tg-0x09">&#160;</td>
+        <td class="tg-0lax">&#160;</td>
+        <td class="tg-0x09">&#160;</td>
       </tr>
       <tr>
-        <td class="tg-0x09"></td>
-        <td class="tg-0lax"></td>
-        <td class="tg-0x09"></td>
-        <td class="tg-0lax"></td>
-        <td class="tg-0x09"></td>
-        <td class="tg-0lax"></td>
-        <td class="tg-0x09"></td>
-        <td class="tg-0lax"></td>
+        <td class="tg-0x09">&#160;</td>
+        <td class="tg-0lax">&#160;</td>
+        <td class="tg-0x09">&#160;</td>
+        <td class="tg-0lax">&#160;</td>
+        <td class="tg-0x09">&#160;</td>
+        <td class="tg-0lax">&#160;</td>
+        <td class="tg-0x09">&#160;</td>
+        <td class="tg-0lax">&#160;</td>
       </tr>
       <tr>
         <td class="tg-0lax">&#9823;</td>
@@ -141,6 +141,34 @@
           <button type="Submit">Submit</button>
           </div>
         </form>
-      <h2 id="Challenge4">Challenge 4: A Google Search Page</h2>
+      <section id="google" style="background-color:black; color:white; font-family:sans-serif;">
+        <h2 id="Challenge4">Challenge 4: A Google Search Page</h2>
+        <div class="content" style="display:inline-block; width:65vw; position:relative; left:25px;">
+          <p></p>
+          <p style="margin-top:25px;">https://www.colorado.edu atlas</p>
+          <a href="https://www.colorado.edu/atlas/"><h3 style="margin-top:0px;">ATLAS Institute | University of Colorado Boulder </h3></a>
+          <p><strong>ATLAS</strong> is an interdisciplinary institute for radical creativity and invention. We transform ingenious ideas into reality through research, ...</p>
+
+          <table style="table-layout: fixed; width: 92px; position:relative; left:15px;">
+          <tbody>
+            <tr>
+              <th class="tg-mk6l"></th>
+              <th class="tg-mk6l"></th>
+            </tr>
+          </tbody>
+          <tbody>
+            <tr>
+              <td class="tg-mk6l"></td>
+              <td class="tg-mk6l"></td>
+            </tr>
+            <tr>
+              <td class="tg-mk6l"></td>
+              <td class="tg-mk6l"></td>
+            </tr>
+          </tbody>
+          </table>
+        </div>
+      </section>
+
       <h2 id="Challenge5">Challenge 5: Accessibility Concerns</h2>
-        <p>Challenges two and three both pose problems to the visually impaired. I think I could address the issues posed by these components by creating a screen reader-friendly website. Meaning I would use alternate text to describe each of the parts in enough detail to communicate their function or appearance. The issues posed by these components could easily be addressed with alternate text. A simple, minimal effort, solution, that would improve accessibility greatly.</p>
+        <p>Both challenges two and three pose problems to the visually impaired. I think I could address the issues posed by these components by creating a screen reader-friendly website. Meaning I would use alternate text to describe each of the parts in enough detail to communicate their function or appearance. The issues posed by these components could easily be addressed with alternate text. A simple, minimal effort, solution, that would improve accessibility greatly.</p>
