--- a/assignment4.html
+++ b/assignment4.html
@@ -24,6 +24,7 @@
       </ol>
 
     <h2 id="Challenge2">Challenge 2: Build a Chessboard</h2>
+    <p><em> I decided to center my Unicode peices in my squares so that my chess board would more like an actual board and create a more cohesive design.</em></p>
       <table class="tg">
     <thead>
       <tr>
@@ -144,29 +145,51 @@
       <section id="google" style="background-color:black; color:white; font-family:sans-serif;">
         <h2 id="Challenge4">Challenge 4: A Google Search Page</h2>
         <div class="content" style="display:inline-block; width:65vw; position:relative; left:25px;">
-          <p></p>
+          <p>About 1,990,000,000 results (0.58 seconds)</p>
           <p style="margin-top:25px;">https://www.colorado.edu atlas</p>
           <a href="https://www.colorado.edu/atlas/"><h3 style="margin-top:0px;">ATLAS Institute | University of Colorado Boulder </h3></a>
           <p><strong>ATLAS</strong> is an interdisciplinary institute for radical creativity and invention. We transform ingenious ideas into reality through research, ...</p>
 
           <table style="table-layout: fixed; width: 92px; position:relative; left:15px;">
+          <colgroup>
+          <col style="width: 350px;">
+          <col style="width: 350px;">
           <tbody>
             <tr>
-              <th class="tg-mk6l"></th>
-              <th class="tg-mk6l"></th>
+              <td><a href="https://www.colorado.edu/atlas/academics/grad"><h3 style="margin-top:0px; margin-bottom:0px;">Graduate Degrees in Creative ...</h3></a>
+              <p>Radically interdisciplinary, ATLAS graduate programs nurture ...</p>
+              <td><a href="https://www.colorado.edu/atlas/academics"><h3 style="margin-top:0px; margin-bottom:0px; color: white;">Academics</h3></a>
+              <p>Granted through the College of Engineering and Applied ...</p>
             </tr>
           </tbody>
           <tbody>
             <tr>
-              <td class="tg-mk6l"></td>
-              <td class="tg-mk6l"></td>
+              <td><a href="https://www.colorado.edu/atlas/faculty"><h3 style="margin-top:0px; margin-bottom:0px;">Faculty</h3></a>
+              <p>Lecturer, co-chair Board of Advisors • DESIGN, AR/VR ...</p>
+              <td><a href="https://www.colorado.edu/atlas/academics/undergraduate"><h3 style="margin-top:0px; margin-bottom:0px;">Undergraduate Programs</h3></a>
+              <p>Awarded through the College of Engineering and Applied ... </p>
             </tr>
             <tr>
-              <td class="tg-mk6l"></td>
-              <td class="tg-mk6l"></td>
+              <td><a href="https://www.colorado.edu/atlas/about-atlas"><h3 style="margin-top:0px; margin-bottom:0px;">About</h3></a>
+              <p> ATLAS is an interdisciplinary institute for radical creativity and ...</p>
+              <td><a href="https://www.colorado.edu/atlas/research-creative"><h3 style="margin-top:0px; margin-bottom:0px;">Research + Creative</h3></a>
+              <p>Check out ATLAS Research Showcase 2020.</p>
+            </tr>
+            <tr>
+              <td><p style="margin-top:0px; margin-bottom:0px;">More results from colorado.edu >></p>
+              <td><p style="margin-top:0px; margin-bottom:0px;">&#8239;</p>
             </tr>
           </tbody>
           </table>
+          <p style="margin-top:25px;">https://www.colorado.edu > innovative > atlas-Institute</p>
+          <a href="https://www.colorado.edu/innovate/atlas-institute"><h3 style="margin-top:0px;"> ATLAS Institute | Innovation & Entrepreneurship - University of ...</h3></a>
+          <p>Resource that sponsors diverse interdisciplinary academic and research programs, challenging community members to explore, innovate, create and design well ...</p>
+          <p style="margin-top:25px;">https://twitter.com/cuatlas</p>
+          <a href="https://twitter.com/cuatlas?ref_src=twsrc%5Egoogle%7Ctwcamp%5Eserp%7Ctwgr%5Eauthor"><h3 style="margin-top:0px;">CU ATLAS (@cuatlas) Twitter</h3></a>
+          <p>#ATLAS presents Build Cool Things That Matter by @cuengineering guest Matt Carney. Learn about Carney’s own work in robotics, prosthetics, & design, + be inspired about the future!🦿💻⚡ When + Where: 2/8 11:30a-12:30p on Zoom rb.gy/c0udem More: tinyurl.com/atlas-collo… pic.twitter.com/dLz9ro4…</p>
+          <p style="margin-top:25px;">https://www.linkedin.com> school > atlas-cu-boulder</p>
+          <a href="https://www.linkedin.com/school/atlas-cu-boulder/"><h3 style="margin-top:0px;">ATLAS Institute at CU Boulder Employees, Location, Alumni</h3></a>
+          <p>ATLAS is an interdisciplinary institute for radical creativity and invention where ingenious ideas become reality. · ATLAS Institute at CU Boulder. View all open ...</p>
         </div>
       </section>
 
