--- a/index.html
+++ b/index.html
@@ -6,6 +6,11 @@
   </head>
   <body>
     <h1>Navigation</h1>
-    <a href="https://torbrown.github.io/assignment4"><h2>HTML Challenges + Pattern Library</h2></a>
+    <ol>
+      <a href="https://torbrown.github.io/assignment4"><h2>HTML Challenges + Pattern Library</h2></a>
+      <a href="https://torbrown.github.io/assignment3"><h2>Encyclopedia Page</h2></a>
+      <a href="https://torbrown.github.io/assignment2"><h2>"hello me" Assignment</h2></a>
+      <a href="https://torbrown.github.io/assignment1"><h2>Technology Setup</h2></a>
+    </ol>
   </body>
 </html>
