--- a/assignment4.html
+++ b/assignment4.html
@@ -25,6 +25,7 @@
 
     <h2 id="Challenge2">Challenge 2: Build a Chessboard</h2>
     <p><em> I decided to center my Unicode peices in my squares so that my chess board would more like an actual board and create a more cohesive design.</em></p>
+    <meter min="0" max="100" low="50" value="65">65%</meter>
       <table class="tg">
     <thead>
       <tr>
@@ -158,7 +159,7 @@
             <tr>
               <td><a href="https://www.colorado.edu/atlas/academics/grad"><h3 style="margin-top:0px; margin-bottom:0px;">Graduate Degrees in Creative ...</h3></a>
               <p>Radically interdisciplinary, ATLAS graduate programs nurture ...</p>
-              <td><a href="https://www.colorado.edu/atlas/academics"><h3 style="margin-top:0px; margin-bottom:0px; color: white;">Academics</h3></a>
+              <td><a href="https://www.colorado.edu/atlas/academics"><h3 style="margin-top:0px; margin-bottom:0px;">Academics</h3></a>
               <p>Granted through the College of Engineering and Applied ...</p>
             </tr>
           </tbody>
