--- a/index.html
+++ b/index.html
@@ -6,6 +6,7 @@
   </head>
   <body>
     <h1>Navigation</h1>
+    <p><em>I added this portion of the assignment</em></p>
     <ol>
       <a href="https://torbrown.github.io/assignment4"><h2>HTML Challenges + Pattern Library</h2></a>
       <a href="https://torbrown.github.io/assignment3"><h2>Encyclopedia Page</h2></a>
