--- a/assignment4.html
+++ b/assignment4.html
@@ -25,7 +25,9 @@
 
     <h2 id="Challenge2">Challenge 2: Build a Chessboard</h2>
     <p><em> I decided to center my Unicode peices in my squares so that my chess board would more like an actual board and create a more cohesive design.</em></p>
-    <meter min="0" max="100" low="50" value="65">65%</meter>
+    <h3>Skill level:</h3><br><meter min="0" max="100" low="50" value="65">65%</meter>
+    <p><em> TAG element: EXPLORE! I found this meter tag which creates a neat little bar displaying a percentage by googleing "cool HTML tags." Needless to say, I am quite happy with it. Here is the link</em></p>
+    <a href="https://blog.duda.co/8-cool-html-tags-you-didn-t-know-existed"><p>DUDA</p></a>
       <table class="tg">
     <thead>
       <tr>
