--- a/index.html
+++ b/index.html
@@ -7,11 +7,10 @@
   <body>
     <h1>Navigation</h1>
     <p><em>I added this portion of the assignment</em></p>
-    <ol>
+      <a href="https://torbrown.github.io/assignment5"><h2>HTML Challenges + Pattern Library REDUX</h2></a>
       <a href="https://torbrown.github.io/assignment4"><h2>HTML Challenges + Pattern Library</h2></a>
       <a href="https://torbrown.github.io/assignment3"><h2>Encyclopedia Page</h2></a>
       <a href="https://torbrown.github.io/assignment2"><h2>"hello me" Assignment</h2></a>
       <a href="https://torbrown.github.io/assignment1"><h2>Technology Setup</h2></a>
-    </ol>
   </body>
 </html>
