--- a/assignment5.html
+++ b/assignment5.html
@@ -2,7 +2,7 @@
 <html lang="en" dir="ltr">
   <head>
     <meta charset="utf-8">
-    <title>Assignment 4</title>
+    <title>Assignment 5</title>
     <style type="text/css">
     .tg  {border-collapse:collapse;border-spacing:0;border-color:black;border-style:solid;border-width: 5px}
     .tg td{border-color:black;border-style:solid;border-width:0px;font-family:Arial, sans-serif;font-size:40px;
@@ -23,6 +23,7 @@
         <li><a href="#Challenge5"><h3>Challenge 5: Accessibility Concerns</h3></a></li>
       </ol>
 
+    <section id="#Challenge2">
     <h2 id="Challenge2">Challenge 2: Build a Chessboard</h2>
     <p><em> I decided to center my Unicode peices in my squares so that my chess board would more like an actual board and create a more cohesive design.</em></p>
     <h3>Skill level:</h3><br><meter min="0" max="100" low="50" value="65">65%</meter>
@@ -114,6 +115,8 @@
       </tr>
     </tbody>
     </table>
+  </section>
+  <section id="#Challenge3">
       <h2 id="Challenge3">Challenge 3: Create a Form</h2>
         <form>
           <div>
@@ -145,7 +148,8 @@
           <button type="Submit">Submit</button>
           </div>
         </form>
-      <section id="google" style="background-color:black; color:white; font-family:sans-serif;">
+    </section>
+      <section id="#Challenge4" style="background-color:black; color:white; font-family:sans-serif;">
         <h2 id="Challenge4">Challenge 4: A Google Search Page</h2>
         <div class="content" style="display:inline-block; width:65vw; position:relative; left:25px;">
           <p>About 1,990,000,000 results (0.58 seconds)</p>
@@ -195,6 +199,7 @@
           <p>ATLAS is an interdisciplinary institute for radical creativity and invention where ingenious ideas become reality. · ATLAS Institute at CU Boulder. View all open ...</p>
         </div>
       </section>
-
+      <section id="#Challenge5">
       <h2 id="Challenge5">Challenge 5: Accessibility Concerns</h2>
         <p>Both challenges two and three pose problems to the visually impaired. I think I could address the issues posed by these components by creating a screen reader-friendly website. Meaning I would use alternate text to describe each of the parts in enough detail to communicate their function or appearance. The issues posed by these components could easily be addressed with alternate text. A simple, minimal effort, solution, that would improve accessibility greatly.</p>
+      </section>
