--- a/index.html
+++ b/index.html
@@ -7,6 +7,7 @@
   <body>
     <h1>Navigation</h1>
     <p><em>I added this portion of the assignment</em></p>
+      <a href="https://torbrown.github.io/assignment6"><h2>Assignment 6</h2></a>
       <a href="https://torbrown.github.io/assignment5"><h2>HTML Challenges + Pattern Library REDUX</h2></a>
       <a href="https://torbrown.github.io/assignment4"><h2>HTML Challenges + Pattern Library</h2></a>
       <a href="https://torbrown.github.io/assignment3"><h2>Encyclopedia Page</h2></a>
