--- a/Assignment 6/assignment6.html
+++ b/Assignment 6/assignment6.html
@@ -3,12 +3,16 @@
   <head>
     <meta charset="utf-8">
     <title>assignment6</title>
-    <link rel=""
+    <link rel="stylesheet" href="assignment6-style.css">
   </head>
   <body>
-    <div class="Navigation">
+    <div class="navigation">
+      <a class="active" href="#home">Home</a>
+      <a href="#contact">Contact</a>
+      <a href="#about">About</a>
     </div>
+    <div>
     <h1>Assignment 6</h1>
-
+    </div>
   </body>
 </html>
