--- a/Assignment 6/navigation.html
+++ b/Assignment 6/navigation.html
@@ -3,8 +3,14 @@
   <head>
     <meta charset="utf-8">
     <title>Navigation</title>
+    <link rel="stylesheet" href="assignment6-style.css">
   </head>
   <body>
+    <div class="navigation">
+      <a href="assignment6.html">Home</a>
+      <a href="contact.html">Contact</a>
+      <a class="active" href="#previous">Previous assignments</a>
+    </div>
     <h1>Navigation</h1>
     <p><em>I added this portion of the assignment</em></p>
       <a href="https://torbrown.github.io/assignment6"><h2>Assignment 6</h2></a>
