--- a/Assignment 6/contact.html
+++ b/Assignment 6/contact.html
@@ -2,19 +2,16 @@
 <html lang="en" dir="ltr">
   <head>
     <meta charset="utf-8">
-    <title>assignment6</title>
+    <title>contact</title>
     <link rel="stylesheet" href="assignment6-style.css">
   </head>
   <body>
     <div class="navigation">
-      <a class="active" href="#home">Home</a>
-      <a href="contact.html">Contact</a>
+      <a href="assignment6.html">Home</a>
+      <a class="active" href="#contact">Contact</a>
       <a href="navigation.html">Previous assignments</a>
     </div>
     <hr>
-    <div>
-    <h1>Assignment 6: Portfolio Development </h1>
-    <h2></h2>
-    </div>
+    <p> Hi, this page will be added to.</p>
   </body>
 </html>
