--- a/Assignment 6/assignment6.html
+++ b/Assignment 6/assignment6.html
@@ -14,7 +14,10 @@
     <hr>
     <div>
     <h1>Assignment 6: Portfolio Development </h1>
-    <h2></h2>
+    <h1>Tor Erik Brown</h1>
+    <h2>Pronouns: he, him, his</h2>
+    <p><b>Goals:</b> By the end of the course I would love to have a website that could serve as a home for my portfolio.</p>
+    <p> I grew up in Eagle CO, my major is ENVD with an emphasis in architecture. I am also a CTD minor and a Buisness minor.</p>
     </div>
   </body>
 </html>
