--- a/Assignment 6/assignment6.html
+++ b/Assignment 6/assignment6.html
@@ -9,9 +9,12 @@
     <div class="navigation">
       <a class="active" href="#home">Home</a>
       <a href="contact.html">Contact</a>
-      <a href="navigation.html">Previous assignments</a>
+      <a href="navigation.html">projects</a>
     </div>
     <hr>
+    <div class="image">
+    <p><img src="BGimg/mainIMG.jpeg" alt="pretty sky"></p>
+  </div>
     <div>
     <h1>Assignment 6: Portfolio Development </h1>
     <h1>Tor Erik Brown</h1>
