--- a/Assignment 6/contact.html
+++ b/Assignment 6/contact.html
@@ -9,7 +9,7 @@
     <div class="navigation">
       <a href="assignment6.html">Home</a>
       <a class="active" href="#contact">Contact</a>
-      <a href="navigation.html">Previous assignments</a>
+      <a href="navigation.html">projects</a>
     </div>
     <hr>
     <p> Hi, this page will be added to.</p>
