--- a/Assignment 6/navigation.html
+++ b/Assignment 6/navigation.html
@@ -8,16 +8,15 @@
   <body>
     <div class="navigation">
       <a href="assignment6.html">Home</a>
-      <a href="contact.html">Contact</a>
-      <a class="active" href="#previous">Previous assignments</a>
+      <a class="active" href="#previous">projects</a>
     </div>
-    <h1>Navigation</h1>
-    <p><em>I added this portion of the assignment</em></p>
+    <hr>
+    <h1>Previous Work</h1>
       <a href="https://torbrown.github.io/assignment6"><h2>Assignment 6</h2></a>
       <a href="https://torbrown.github.io/assignment5"><h2>HTML Challenges + Pattern Library REDUX</h2></a>
       <a href="https://torbrown.github.io/assignment4"><h2>HTML Challenges + Pattern Library</h2></a>
       <a href="https://torbrown.github.io/assignment3"><h2>Encyclopedia Page</h2></a>
       <a href="https://torbrown.github.io/assignment2"><h2>"hello me" Assignment</h2></a>
-      <a href="https://torbrown.github.io/assignment1"><h2>Technology Setup</h2></a>
+      <a href="https://torbrown.github.io/week%201/assignment1"><h2>Technology Setup</h2></a>
   </body>
 </html>
