--- a/Assignment 6/assignment6.html
+++ b/Assignment 6/assignment6.html
@@ -12,12 +12,15 @@
       <a href="navigation.html">projects</a>
     </div>
     <hr>
-    <div class="image">
-    <p><img src="BGimg/mainIMG.jpeg" alt="pretty sky"></p>
+  <div class="image">
+    <div class="bottomright">
+      <h1>Tor Erik Brown</h1>
+    </div>
+
   </div>
+  <hr>
     <div>
     <h1>Assignment 6: Portfolio Development </h1>
-    <h1>Tor Erik Brown</h1>
     <h2>Pronouns: he, him, his</h2>
     <p><b>Goals:</b> By the end of the course I would love to have a website that could serve as a home for my portfolio.</p>
     <p> I grew up in Eagle CO, my major is ENVD with an emphasis in architecture. I am also a CTD minor and a Buisness minor.</p>
