--- a/Assignment 6/navigation.html
+++ b/Assignment 6/navigation.html
@@ -8,15 +8,15 @@
   <body>
     <div class="navigation">
       <a href="assignment6.html">Home</a>
+      <a href="contact.html">Contact</a>
       <a class="active" href="#previous">projects</a>
     </div>
     <hr>
     <h1>Previous Work</h1>
-      <a href="https://torbrown.github.io/assignment6"><h2>Assignment 6</h2></a>
-      <a href="https://torbrown.github.io/assignment5"><h2>HTML Challenges + Pattern Library REDUX</h2></a>
-      <a href="https://torbrown.github.io/assignment4"><h2>HTML Challenges + Pattern Library</h2></a>
-      <a href="https://torbrown.github.io/assignment3"><h2>Encyclopedia Page</h2></a>
-      <a href="https://torbrown.github.io/assignment2"><h2>"hello me" Assignment</h2></a>
-      <a href="https://torbrown.github.io/week%201/assignment1"><h2>Technology Setup</h2></a>
+      <a href="../week 5/assignment5.html"><h2>HTML Challenges + Pattern Library REDUX</h2></a>
+      <a href="../week 4/assignment4.html"><h2>HTML Challenges + Pattern Library</h2></a>
+      <a href="../week 3/assignment3.html"><h2>Encyclopedia Page</h2></a>
+      <a href="../week 2/assignment2.html"><h2>"hello me" Assignment</h2></a>
+      <a href="../week 1/assignment1.html"><h2>Technology Setup</h2></a>
   </body>
 </html>
