update for submission

--- a/Assignment 6/navigation.html
+++ b/Assignment 6/navigation.html
@@ -3,11 +3,11 @@
   <head>
     <meta charset="utf-8">
     <title>Navigation</title>
-    <link rel="stylesheet" href="assignment6-style.css">
+    <link rel="stylesheet" href="styles.css">
   </head>
   <body>
     <div class="navigation">
-      <a href="assignment6.html">Home</a>
+      <a href="index.html">Home</a>
       <a href="contact.html">Contact</a>
       <a class="active" href="#previous">projects</a>
     </div>
