--- a/Assignment 6/contact.html
+++ b/Assignment 6/contact.html
@@ -3,11 +3,11 @@
   <head>
     <meta charset="utf-8">
     <title>contact</title>
-    <link rel="stylesheet" href="assignment6-style.css">
+    <link rel="stylesheet" href="styles.css">
   </head>
   <body>
     <div class="navigation">
-      <a href="assignment6.html">Home</a>
+      <a href="index.html">Home</a>
       <a class="active" href="#contact">Contact</a>
       <a href="navigation.html">projects</a>
     </div>
