--- a/Assignment 6/index.html
+++ b/Assignment 6/index.html
@@ -3,7 +3,7 @@
   <head>
     <meta charset="utf-8">
     <title>assignment6</title>
-    <link rel="stylesheet" href="assignment6-style.css">
+    <link rel="stylesheet" href="styles.css">
   </head>
   <body>
     <div class="navigation">
