--- a/Assignment 6/contact.html
+++ b/Assignment 6/contact.html
@@ -7,7 +7,7 @@
   </head>
   <body>
     <div class="navigation">
-      <a href="index.html">Home</a>
+      <a href="../index.html">Home</a>
       <a class="active" href="#contact">Contact</a>
       <a href="navigation.html">projects</a>
     </div>
