--- a/index.html
+++ b/index.html
@@ -3,13 +3,13 @@
   <head>
     <meta charset="utf-8">
     <title>assignment6</title>
-    <link rel="stylesheet" href="styles.css">
+    <link rel="stylesheet" href="assignment 6/styles.css">
   </head>
   <body>
     <div class="navigation">
       <a class="active" href="#home">Home</a>
-      <a href="contact.html">Contact</a>
-      <a href="navigation.html">projects</a>
+      <a href="assignment 6/contact.html">Contact</a>
+      <a href="assignment 6/navigation.html">projects</a>
     </div>
     <hr>
   <div class="image">
