--- a/Assignment 6/contact.html
+++ b/Assignment 6/contact.html
@@ -3,7 +3,7 @@
   <head>
     <meta charset="utf-8">
     <title>contact</title>
-    <link rel="stylesheet" href="styles.css">
+    <link rel="stylesheet" href="../CSS/styles.css">
   </head>
   <body>
     <div class="navigation">
