--- a/Assignment6/navigation.html
+++ b/Assignment6/navigation.html
@@ -13,10 +13,10 @@
     </div>
     <hr>
     <h1>Previous Work</h1>
-      <a href="../week5/assignment5.html"><h2>HTML Challenges + Pattern Library REDUX</h2></a>
-      <a href="../week4/assignment4.html"><h2>HTML Challenges + Pattern Library</h2></a>
-      <a href="../week3/assignment3.html"><h2>Encyclopedia Page</h2></a>
-      <a href="../week2/assignment2.html"><h2>"hello me" Assignment</h2></a>
-      <a href="../week1/assignment1.html"><h2>Technology Setup</h2></a>
+      <a href="../Week5/assignment5.html"><h2>HTML Challenges + Pattern Library REDUX</h2></a>
+      <a href="../Week4/assignment4.html"><h2>HTML Challenges + Pattern Library</h2></a>
+      <a href="../Week3/assignment3.html"><h2>Encyclopedia Page</h2></a>
+      <a href="../Week2/assignment2.html"><h2>"hello me" Assignment</h2></a>
+      <a href="../Week1/assignment1.html"><h2>Technology Setup</h2></a>
   </body>
 </html>
