--- a/index.html
+++ b/index.html
@@ -8,8 +8,8 @@
   <body>
     <div class="navigation">
       <a class="active" href="#home">Home</a>
-      <a href="assignment 6/contact.html">Contact</a>
-      <a href="assignment 6/navigation.html">projects</a>
+      <a href="Assignment6/contact.html">Contact</a>
+      <a href="Assignment6/navigation.html">projects</a>
     </div>
     <hr>
   <div class="image">
