--- a/Assignment6/navigation.html
+++ b/Assignment6/navigation.html
@@ -7,7 +7,7 @@
   </head>
   <body>
     <div class="navigation">
-      <a href="../index.html">Home</a>
+      <a href="Assignment6.html">Home</a>
       <a href="contact.html">Contact</a>
       <a class="active" href="#previous">projects</a>
     </div>
