--- a/index.html
+++ b/index.html
@@ -2,28 +2,25 @@
 <html lang="en" dir="ltr">
   <head>
     <meta charset="utf-8">
-    <title>assignment6</title>
-    <link rel="stylesheet" href="CSS/styles.css">
+    <title>Assignment 8</title>
+        <link rel="stylesheet" href="CSS/portfolioStyles.css">
   </head>
   <body>
     <div class="navigation">
       <a class="active" href="#home">Home</a>
-      <a href="Assignment6/contact.html">Contact</a>
-      <a href="Assignment6/navigation.html">projects</a>
+      <a href="placeholder">Contact</a>
+      <a href="placeholder">projects</a>
     </div>
-    <hr>
-  <div class="image">
-    <div class="bottomright">
-      <h1>Tor Erik Brown</h1>
-    </div>
-
-  </div>
-  <hr>
-    <div>
-    <h1>Assignment 6: Portfolio Development </h1>
-    <h2>Pronouns: he, him, his</h2>
-    <p><b>Goals:</b> By the end of the course I would love to have a website that could serve as a home for my portfolio.</p>
-    <p> I grew up in Eagle CO, my major is ENVD with an emphasis in architecture. I am also a CTD minor and a Buisness minor.</p>
-    </div>
+    <div class="grid-container">
+  <div class="grid-item">1</div>
+  <div class="grid-item">2</div>
+  <div class="grid-item">3</div>
+  <div class="grid-item">4</div>
+  <div class="grid-item">5</div>
+  <div class="grid-item">6</div>
+  <div class="grid-item">7</div>
+  <div class="grid-item">8</div>
+  <div class="grid-item">9</div>
+</div>
   </body>
 </html>
