--- a/Assignment6/Assignment6.html
+++ b/Assignment6/Assignment6.html
@@ -3,7 +3,7 @@
   <head>
     <meta charset="utf-8">
     <title>assignment6</title>
-    <link rel="stylesheet" href="CSS/styles.css">
+    <link rel="stylesheet" href="CSS/OLDstyles.css">
   </head>
   <body>
     <div class="navigation">
