--- a/index.html
+++ b/index.html
@@ -3,47 +3,34 @@
   <head>
     <meta charset="utf-8">
     <title>Assignment 8</title>
-        <link rel="stylesheet" href="CSS/styles.css">
+      <link rel="stylesheet" href="CSS/styles.css">
+      <!-- <script src="Javascript/scripts.js" defer></script> -->
   </head>
   <body>
-    <div class="container">
       <div class="navbar">
-        <nav>
-          <ul id="menuList">
-            <li><a class="active" href="#home">home</a></li>
-            <li><a href="placeholder">contact</a></li>
-            <li><a href="placeholder">projects</a></li>
-            <li><a href="placeholder">resume</a></li>
+        <div class="portfolio-title">Portfolio</div>
+        <a href="#" class="toggel">
+          <span class="bar"></span>
+          <span class="bar"></span>
+          <span class="bar"></span>
+        </a>
+        <div class="navlinks">
+          <ul>
+            <li><a href="#">Home</a></li>
+            <li><a href="#">Projects</a></li>
+            <li><a href="#">Resume</a></li>
+            <li><a href="#">Contact</a></li>
           </ul>
-        </nav>
-        <img src="img/menuicon.png" class="icon" onclick="toggel">
+        </div>
       </div>
-    </div>
     <!-- gird layout -->
     <div class="flexbox-container">
-      <div class="flexbox-item flexbox-item-1"></div>
+      <div class="flexbox-item flexbox-item-1">Head shot will go here.
+      </div>
       <div class="flexbox-item flexbox-item-2">
-        <h1> Tor Erik</h1>
-        <p> I grew up in Eagle CO, my major is ENVD with an emphasis in architecture. I am also a CTD minor and a Buisness minor.</p>
+        <h3> Tor Erik Brown</h3>
+        <p> I am a Senior at the University of Colorado Boulder, exploring options in the architectural field. As an Environmental Design major, I am fascinated by the roles that the spaces we inhabit have and how they can affect not only their inhabitants but also the surrounding environment. I want to explore how each of architecture’s many elements influences these factors.</p>
       </div>
     </div>
-    <script>
-
-      var menuList = document.getElementByID("menuList");
-
-      menuList.style.maxHeight = "0px";
-
-      function toggel(){
-        if(menuList.style.maxHeight == "0px")
-          {
-            menuList.style.maxHeight = "130px";
-          }
-        else
-          {
-            menuList.style.maxHeight = "0px";
-          }
-      }
-    </script>
-
   </body>
 </html>
