--- a/index.html
+++ b/index.html
@@ -4,7 +4,7 @@
     <meta charset="utf-8">
     <title>Assignment 8</title>
       <link rel="stylesheet" href="CSS/styles.css">
-      <!-- <script src="Javascript/scripts.js" defer></script> -->
+      <script src="Javascript/scripts.js" defer></script>
   </head>
   <body>
       <div class="navbar">
@@ -16,10 +16,10 @@
         </a>
         <div class="navlinks">
           <ul>
-            <li><a href="#">Home</a></li>
-            <li><a href="#">Projects</a></li>
-            <li><a href="#">Resume</a></li>
-            <li><a href="#">Contact</a></li>
+            <li><a class="activeLink" href="#">Home</a></li>
+            <li><a href="/midterm/projects.html">Projects</a></li>
+            <li><a href="/midterm/resume.html">Resume</a></li>
+            <li><a href="/midterm/contact.html">Contact</a></li>
           </ul>
         </div>
       </div>
