--- a/midterm/projects.html
+++ b/midterm/projects.html
@@ -25,20 +25,32 @@
       </div>
     <!-- gird layout -->
     <div class="row">
-      <div class="column">
-        <div class="grid-item"></div>
-        <div class="grid-item"></div>
-        <div class="grid-item"></div>
+      <div class="tiles">
+      	<a class="tile" href="#">
+      		<img src="../img/bird.jpg"/>
+          <div class="details">
+      		    <span class="title">Project</span>
+      		  <span class="info">hogehoge</span>
+      	  </div>
+        </a>
       </div>
-      <div class="column">
-        <div class="grid-item"></div>
-        <div class="grid-item"></div>
-        <div class="grid-item"></div>
+      <div class="tiles">
+        <a class="tile" href="#">
+          <img src="../img/bird.jpg"/>
+          <div class="details">
+            <span class="title">Project 2</span>
+            <span class="info">hogehoge</span>
+          </div>
+        </a>
       </div>
-      <div class="column">
-        <div class="grid-item"></div>
-        <div class="grid-item"></div>
-        <div class="grid-item"></div>
+      <div class="tiles">
+        <a class="tile" href="#">
+          <img src="../img/bird.jpg"/>
+          <div class="details">
+            <span class="title">Project 3</span>
+            <span class="info">hogehoge</span>
+          </div>
+        </a>
       </div>
     </div>
   </body>
