--- a/index.html
+++ b/index.html
@@ -2,6 +2,7 @@
 <html lang="en" dir="ltr">
   <head>
     <meta charset="utf-8">
+    <meta name="viewport" content="width=device-width,initial-scale=1">
     <title>Assignment 8</title>
       <link rel="stylesheet" href="CSS/styles.css">
       <script src="Javascript/scripts.js" defer></script>
