--- a/midterm/projects.html
+++ b/midterm/projects.html
@@ -7,51 +7,58 @@
       <script src="Javascript/scripts.js" defer></script>
   </head>
   <body>
-      <div class="navbar">
-        <div class="portfolio-title">Portfolio</div>
-        <a href="#" class="toggel">
-          <span class="bar"></span>
-          <span class="bar"></span>
-          <span class="bar"></span>
-        </a>
-        <div class="navlinks">
-          <ul>
-            <li><a href="../index.html">Home</a></li>
-            <li><a class="activeLink" href="#">Projects</a></li>
-            <li><a href="/midterm/resume.html">Resume</a></li>
-            <li><a href="/midterm/contact.html">Contact</a></li>
-          </ul>
-        </div>
-      </div>
-    <!-- gird layout -->
-    <div class="row">
-      <div class="tiles">
-      	<a class="tile" href="#">
-      		<img src="../img/bird.jpg"/>
-          <div class="details">
-      		    <span class="title">Project</span>
-      		  <span class="info">hogehoge</span>
-      	  </div>
-        </a>
-      </div>
-      <div class="tiles">
-        <a class="tile" href="#">
-          <img src="../img/bird.jpg"/>
-          <div class="details">
-            <span class="title">Project 2</span>
-            <span class="info">hogehoge</span>
-          </div>
-        </a>
-      </div>
-      <div class="tiles">
-        <a class="tile" href="#">
-          <img src="../img/bird.jpg"/>
-          <div class="details">
-            <span class="title">Project 3</span>
-            <span class="info">hogehoge</span>
-          </div>
-        </a>
+    <div class="navbar">
+      <div class="portfolio-title">Portfolio</div>
+      <a href="#" class="toggel">
+        <span class="bar"></span>
+        <span class="bar"></span>
+        <span class="bar"></span>
+      </a>
+      <div class="navlinks">
+        <ul>
+          <li><a href="../index.html">Home</a></li>
+          <li><a class="activeLink" href="#">Projects</a></li>
+          <li><a href="/midterm/resume.html">Resume</a></li>
+          <li><a href="/midterm/contact.html">Contact</a></li>
+        </ul>
       </div>
     </div>
+  <section class="content">
+        <!-- discription -->
+      <div class="description">
+        <h2>Projects</h2>
+        <p> bal balba abfba</p>
+      </div>
+      <!-- gird layout -->
+      <div class="row">
+        <div class="tiles">
+        	<a class="tile" href="#">
+        		<img src="../img/intern123.jpg"/>
+            <div class="details">
+        		    <span class="title">Internship Work</span>
+        		  <span class="info">A series of renderings from an internship at BLDG Collective.</span>
+        	  </div>
+          </a>
+        </div>
+        <div class="tiles">
+          <a class="tile" href="#">
+            <img src="../img/bird.jpg"/>
+            <div class="details">
+              <span class="title">Project 2</span>
+              <span class="info">hogehoge</span>
+            </div>
+          </a>
+        </div>
+        <div class="tiles">
+          <a class="tile" href="#">
+            <img src="../img/bird.jpg"/>
+            <div class="details">
+              <span class="title">Project 3</span>
+              <span class="info">hogehoge</span>
+            </div>
+          </a>
+        </div>
+      </div>
+    </section>
   </body>
 </html>
