--- a/midterm/contact.html
+++ b/midterm/contact.html
@@ -23,6 +23,11 @@
           </ul>
         </div>
       </div>
-    <!-- gird layout -->
+    <section class="content">
+      <div class="description">
+        <h2>Contact</h2>
+        <p>I can be found at these various links.</p>
+      </div>
+    </section>
   </body>
 </html>
