--- a/midterm/projects.html
+++ b/midterm/projects.html
@@ -27,7 +27,7 @@
           <!-- discription -->
         <div class="description">
           <h2>Projects</h2>
-          <p> bal balba abfba</p>
+          <p>Here are several Projects that I've worked on during the course of this class.</p>
         </div>
         <!-- gird layout -->
         <div class="row">
@@ -36,25 +36,25 @@
           		<img src="../img/intern123.jpg"/>
               <div class="details">
           		    <span class="title">Internship Work</span>
-          		  <span class="info">A series of renderings from an internship at BLDG Collective.</span>
+          		  <span class="info">A series of renderings from an internship at BLDG Collective.<br>UNDER CONSTRUCTION</span>
           	  </div>
             </a>
           </div>
           <div class="tiles">
-            <a class="tile" href="#">
-              <img src="../img/bird.jpg"/>
+            <a class="tile" href="../Week5/assignment5.html">
+              <img src="../img/htmlLogo.png"/>
               <div class="details">
-                <span class="title">Project 2</span>
-                <span class="info">bla bla bla</span>
+                <span class="title">Week 5 Assignment</span>
+                <span class="info">This projects goal was to further our HTML skills and gain an introduction to CSS.</span>
               </div>
             </a>
           </div>
           <div class="tiles">
-            <a class="tile" href="#">
+            <a class="tile" href="../Week3/assignment3.html">
               <img src="../img/bird.jpg"/>
               <div class="details">
-                <span class="title">Project 3</span>
-                <span class="info">bla bla vla</span>
+                <span class="title">Wiki Page</span>
+                <span class="info">This projects goal was to replicate a wikipidia page using HTML.</span>
               </div>
             </a>
           </div>
