--- a/midterm/resume.html
+++ b/midterm/resume.html
@@ -7,24 +7,28 @@
       <script src="Javascript/scripts.js" defer></script>
   </head>
   <body>
-      <div class="navbar">
-        <div class="portfolio-title">Portfolio</div>
-        <a href="#" class="toggel">
-          <span class="bar"></span>
-          <span class="bar"></span>
-          <span class="bar"></span>
-        </a>
-        <div class="navlinks">
-          <ul>
-            <li><a href="../index.html">Home</a></li>
-            <li><a href="/midterm/projects.html">Projects</a></li>
-            <li><a class="activeLink" href="#">Resume</a></li>
-            <li><a href="/midterm/contact.html">Contact</a></li>
-          </ul>
-        </div>
+    <div class="navbar">
+      <div class="portfolio-title">Portfolio</div>
+      <a href="#" class="toggel">
+        <span class="bar"></span>
+        <span class="bar"></span>
+        <span class="bar"></span>
+      </a>
+      <div class="navlinks">
+        <ul>
+          <li><a href="../index.html">Home</a></li>
+          <li><a href="/midterm/projects.html">Projects</a></li>
+          <li><a class="activeLink" href="#">Resume</a></li>
+          <li><a href="/midterm/contact.html">Contact</a></li>
+        </ul>
       </div>
+    </div>
     <!-- gird layout -->
     <section class="content">
-  </section>
+      <div class="description">
+        <h2>About Me</h2>
+        <p>Here is a copy of my resume.</p>
+      </div>
+    </section>
   </body>
 </html>
