--- a/midterm/contact.html
+++ b/midterm/contact.html
@@ -3,6 +3,7 @@
   <head>
     <meta charset="utf-8">
     <title>Assignment 8</title>
+    <meta name="viewport" content="width=device-width,initial-scale=1">
       <link rel="stylesheet" href="../CSS/styles.css">
       <script src="Javascript/scripts.js" defer></script>
   </head>
@@ -28,6 +29,26 @@
         <h2>Contact</h2>
         <p>I can be found at these various links.</p>
       </div>
+      <div class="logos">
+        <div class="row">
+          <div class="tiles">
+            <a class="tile" href="https://www.linkedin.com/in/tor-erik-brown-69142a191/">
+              <img src="../img/linkedIn-Icon.png"/>
+              <div class="details">
+                  <span class="title">Linkdin</span>
+              </div>
+            </a>
+          </div>
+          <div class="tiles">
+            <a class="tile" href="https://www.instagram.com/torerik.brown/">
+              <img src="../img/instagramlogo.png"/>
+              <div class="details">
+                <span class="title">Instagram</span>
+              </div>
+            </a>
+          </div>
+        </div>
+
     </section>
   </body>
 </html>
