--- a/midterm/resume.html
+++ b/midterm/resume.html
@@ -3,6 +3,7 @@
   <head>
     <meta charset="utf-8">
     <title>Assignment 8</title>
+    <meta name="viewport" content="width=device-width,initial-scale=1">
       <link rel="stylesheet" href="../CSS/styles.css">
       <script src="Javascript/scripts.js" defer></script>
   </head>
@@ -28,6 +29,9 @@
       <div class="description">
         <h2>About Me</h2>
         <p>Here is a copy of my resume.</p>
+      </div>
+      <div class="resume">
+        <img src="../img/Res123.png">
       </div>
     </section>
   </body>
