--- a/midterm/contact.html
+++ b/midterm/contact.html
@@ -33,7 +33,7 @@
         <div class="row">
           <div class="tiles">
             <a class="tile" href="https://www.linkedin.com/in/tor-erik-brown-69142a191/">
-              <img src="../img/linkedIn-Icon.png"/>
+              <img src="../img/LinkedIn-Icon.png"/>
               <div class="details">
                   <span class="title">Linkdin</span>
               </div>
