--- a/Week11/assignment11.html
+++ b/Week11/assignment11.html
@@ -9,11 +9,20 @@
   <body>
     <section class="A11">
       <h1>Assignment 11</h1>
-      <h3>Color changer</h3>
-      <div class="colorBtn">
-        <P>Click me!</p>
+      <h3>Color changer:</h3>
+      <div id="colorBtn">
       </div>
-    </section>
+      <!-- Some of the colors look alike but they have different values. -->
+      <button id="BTN">Click me!</button>
 
+      <h3>Stop Watch:</h3>
+
+      <p><span id="sec">00</span>:<span id="ten">00</span></p>
+
+      <button id="start">Start</button>
+      <button id="stop">Stop</button>
+      <button id="reset">Reset</button>
+
+    </section>
   </body>
 </html>
