--- a/index.html
+++ b/index.html
@@ -31,6 +31,7 @@
       <div class="flexbox-item flexbox-item-2">
         <h3> Tor Erik Brown</h3>
         <p> I am a Senior at the University of Colorado Boulder, exploring options in the architectural field. As an Environmental Design major, I am fascinated by the roles that the spaces we inhabit have and how they can affect not only their inhabitants but also the surrounding environment. I want to explore how each of architecture’s many elements influences these factors.</p>
+        <a href="/week12Demo/week12-demo.html">click</a>
       </div>
     </div>
   </body>
