--- a/week12Demo/week12-demo.html
+++ b/week12Demo/week12-demo.html
@@ -3,14 +3,16 @@
   <head>
     <meta charset="utf-8">
     <title>Week 12 Demo -- Quote Machine</title>
-    <link rel="stylesheet" href="../CSS/week12-demo.css">
+    <link rel="stylesheet" href="../CSS/styles.css">
     <script src="../Javascript/week12Demo.js" defer></script>
   </head>
   <body>
     <div class="app">
-  <header>Random Quote Generator</header>
+  <header>Breaking Bad Quote Generator</header>
   <section class="quotes">
     <div class="quote-text" id="js-quote-text"></div>
+    <div class="quote-author" id="js-quote-author"></div>
+    <div class="quote-series" id="js-quote-series"></div>
   </section>
   <section class="controls">
     <button type="button" id="js-new-quote" class="new-quote button">
