--- a/portfolio.html
+++ b/portfolio.html
@@ -18,9 +18,9 @@
         <div class="navlinks">
           <ul>
             <li><a class="activeLink" href="#">Home</a></li>
-            <li><a href="/midterm/projects.html">Projects</a></li>
-            <li><a href="/midterm/resume.html">Resume</a></li>
-            <li><a href="/midterm/contact.html">Contact</a></li>
+            <li><a href="/Assignments/midterm/projects.html">Projects</a></li>
+            <li><a href="/Assignments/midterm/resume.html">Resume</a></li>
+            <li><a href="/Assignments/midterm/contact.html">Contact</a></li>
           </ul>
         </div>
       </div>
