--- a/Assignments/midterm/contact.html
+++ b/Assignments/midterm/contact.html
@@ -4,7 +4,7 @@
     <meta charset="utf-8">
     <title>Assignment 8</title>
     <meta name="viewport" content="width=device-width,initial-scale=1">
-      <link rel="stylesheet" href="../CSS/styles.css">
+      <link rel="stylesheet" href="../../CSS/styles.css">
       <script src="Javascript/scripts.js" defer></script>
   </head>
   <body>
@@ -17,9 +17,9 @@
         </a>
         <div class="navlinks">
           <ul>
-            <li><a href="../index.html">Home</a></li>
-            <li><a href="/midterm/projects.html">Projects</a></li>
-            <li><a href="/midterm/resume.html">Resume</a></li>
+            <li><a href="../../index.html">Home</a></li>
+            <li><a href="/projects.html">Projects</a></li>
+            <li><a href="/resume.html">Resume</a></li>
             <li><a class="activeLink" href="#">Contact</a></li>
           </ul>
         </div>
@@ -33,7 +33,7 @@
         <div class="row">
           <div class="tiles">
             <a class="tile" href="https://www.linkedin.com/in/tor-erik-brown-69142a191/">
-              <img src="../img/LinkedIn-Icon.png"/>
+              <img src="../../img/LinkedIn-Icon.png"/>
               <div class="details">
                   <span class="title">Linkdin</span>
               </div>
@@ -41,7 +41,7 @@
           </div>
           <div class="tiles">
             <a class="tile" href="https://www.instagram.com/torerik.brown/">
-              <img src="../img/instagramlogo.png"/>
+              <img src="../../img/instagramlogo.png"/>
               <div class="details">
                 <span class="title">Instagram</span>
               </div>
