--- a/Assignments/midterm/projects.html
+++ b/Assignments/midterm/projects.html
@@ -4,7 +4,7 @@
     <meta charset="utf-8">
     <meta name="viewport" content="width=device-width,initial-scale=1">
     <title>Assignment 8</title>
-      <link rel="stylesheet" href="../CSS/styles.css">
+      <link rel="stylesheet" href="../../CSS/styles.css">
       <script src="Javascript/scripts.js" defer></script>
   </head>
   <body>
@@ -17,10 +17,10 @@
         </a>
         <div class="navlinks">
           <ul>
-            <li><a href="../index.html">Home</a></li>
+            <li><a href="../../index.html">Home</a></li>
             <li><a class="activeLink" href="#">Projects</a></li>
-            <li><a href="/midterm/resume.html">Resume</a></li>
-            <li><a href="/midterm/contact.html">Contact</a></li>
+            <li><a href="./resume.html">Resume</a></li>
+            <li><a href="./contact.html">Contact</a></li>
           </ul>
         </div>
       </div>
@@ -34,7 +34,7 @@
         <div class="row">
           <div class="tiles">
           	<a class="tile" href="#">
-          		<img src="../img/intern123.jpg"/>
+          		<img src="../../img/intern123.jpg"/>
               <div class="details">
           		    <span class="title">Internship Work</span>
           		  <span class="info">A series of renderings from an internship at BLDG Collective.<br>UNDER CONSTRUCTION</span>
@@ -43,7 +43,7 @@
           </div>
           <div class="tiles">
             <a class="tile" href="../Week5/assignment5.html">
-              <img src="../img/htmlLogo.png"/>
+              <img src="../../img/htmlLogo.png"/>
               <div class="details">
                 <span class="title">Week 5 Assignment</span>
                 <span class="info">This projects goal was to further our HTML skills and gain an introduction to CSS.</span>
@@ -52,7 +52,7 @@
           </div>
           <div class="tiles">
             <a class="tile" href="../Week3/assignment3.html">
-              <img src="../img/bird.jpg"/>
+              <img src="../../img/bird.jpg"/>
               <div class="details">
                 <span class="title">Wiki Page</span>
                 <span class="info">This projects goal was to replicate a wikipidia page using HTML.</span>
