--- a/Assignments/midterm/resume.html
+++ b/Assignments/midterm/resume.html
@@ -4,7 +4,7 @@
     <meta charset="utf-8">
     <title>Assignment 8</title>
     <meta name="viewport" content="width=device-width,initial-scale=1">
-      <link rel="stylesheet" href="../CSS/styles.css">
+      <link rel="stylesheet" href="../../CSS/styles.css">
       <script src="Javascript/scripts.js" defer></script>
   </head>
   <body>
@@ -17,10 +17,10 @@
       </a>
       <div class="navlinks">
         <ul>
-          <li><a href="../index.html">Home</a></li>
-          <li><a href="/midterm/projects.html">Projects</a></li>
+          <li><a href="../../index.html">Home</a></li>
+          <li><a href="./projects.html">Projects</a></li>
           <li><a class="activeLink" href="#">Resume</a></li>
-          <li><a href="/midterm/contact.html">Contact</a></li>
+          <li><a href="./contact.html">Contact</a></li>
         </ul>
       </div>
     </div>
@@ -31,7 +31,7 @@
         <p>Here is a copy of my resume.</p>
       </div>
       <div class="resume">
-        <img src="../img/Res123.png">
+        <img src="../../img/Res123.png">
       </div>
     </section>
   </body>
