--- a/Assignments/midterm/projects.html
+++ b/Assignments/midterm/projects.html
@@ -3,14 +3,15 @@
   <head>
     <meta charset="utf-8">
     <meta name="viewport" content="width=device-width,initial-scale=1">
-    <title>Assignment 8</title>
+    <title>Projects</title>
       <link rel="stylesheet" href="../../CSS/styles.css">
       <script src="Javascript/scripts.js" defer></script>
+      <script src="../.././Javascript/navbar.js" defer></script>
   </head>
   <body>
       <div class="navbar">
-        <div class="portfolio-title">Portfolio</div>
-        <a href="#" class="toggel">
+        <div class="portfolio-title">Tor</div>
+        <a href="#" class="toggle">
           <span class="bar"></span>
           <span class="bar"></span>
           <span class="bar"></span>
@@ -21,6 +22,7 @@
             <li><a class="activeLink" href="#">Projects</a></li>
             <li><a href="./resume.html">Resume</a></li>
             <li><a href="./contact.html">Contact</a></li>
+            <li><a href=".././finalProject.html">Javascript Project</a></li>
           </ul>
         </div>
       </div>
@@ -34,16 +36,16 @@
         <div class="row">
           <div class="tiles">
           	<a class="tile" href="#">
-          		<img src="../../img/intern123.jpg"/>
+          		<img src="../../img/intern123.jpg" alt="One of my project Renderings"/>
               <div class="details">
           		    <span class="title">Internship Work</span>
-          		  <span class="info">A series of renderings from an internship at BLDG Collective.<br>UNDER CONSTRUCTION</span>
+          		  <span class="info">A series of renderings from an internship at BLDG Collective.</span>
           	  </div>
             </a>
           </div>
           <div class="tiles">
             <a class="tile" href="../Week5/assignment5.html">
-              <img src="../../img/htmlLogo.png"/>
+              <img src="../../img/htmlLogo.png" alt="html css and javascript Logos"/>
               <div class="details">
                 <span class="title">Week 5 Assignment</span>
                 <span class="info">This projects goal was to further our HTML skills and gain an introduction to CSS.</span>
@@ -52,7 +54,7 @@
           </div>
           <div class="tiles">
             <a class="tile" href="../Week3/assignment3.html">
-              <img src="../../img/bird.jpg"/>
+              <img src="../../img/bird.jpg" alt="An image of a Pinyon Jay "/>
               <div class="details">
                 <span class="title">Wiki Page</span>
                 <span class="info">This projects goal was to replicate a wikipidia page using HTML.</span>
