--- a/Assignments/midterm/resume.html
+++ b/Assignments/midterm/resume.html
@@ -2,15 +2,16 @@
 <html lang="en" dir="ltr">
   <head>
     <meta charset="utf-8">
-    <title>Assignment 8</title>
+    <title>Resume</title>
     <meta name="viewport" content="width=device-width,initial-scale=1">
       <link rel="stylesheet" href="../../CSS/styles.css">
       <script src="Javascript/scripts.js" defer></script>
+      <script src="../.././Javascript/navbar.js" defer></script>
   </head>
   <body>
     <div class="navbar">
-      <div class="portfolio-title">Portfolio</div>
-      <a href="#" class="toggel">
+      <div class="portfolio-title">Tor</div>
+      <a href="#" class="toggle">
         <span class="bar"></span>
         <span class="bar"></span>
         <span class="bar"></span>
@@ -21,6 +22,7 @@
           <li><a href="./projects.html">Projects</a></li>
           <li><a class="activeLink" href="#">Resume</a></li>
           <li><a href="./contact.html">Contact</a></li>
+          <li><a href=".././finalProject.html">Javascript Project</a></li>
         </ul>
       </div>
     </div>
@@ -31,7 +33,7 @@
         <p>Here is a copy of my resume.</p>
       </div>
       <div class="resume">
-        <img src="../../img/Res123.png">
+        <img src="../../img/Res123.png" alt = "resume">
       </div>
     </section>
   </body>
