--- a/Assignments/midterm/contact.html
+++ b/Assignments/midterm/contact.html
@@ -2,15 +2,16 @@
 <html lang="en" dir="ltr">
   <head>
     <meta charset="utf-8">
-    <title>Assignment 8</title>
+    <title>Contact</title>
     <meta name="viewport" content="width=device-width,initial-scale=1">
       <link rel="stylesheet" href="../../CSS/styles.css">
       <script src="Javascript/scripts.js" defer></script>
+      <script src="../.././Javascript/navbar.js" defer></script>
   </head>
   <body>
       <div class="navbar">
-        <div class="portfolio-title">Portfolio</div>
-        <a href="#" class="toggel">
+        <div class="portfolio-title">Tor</div>
+        <a href="#" class="toggle">
           <span class="bar"></span>
           <span class="bar"></span>
           <span class="bar"></span>
@@ -18,9 +19,10 @@
         <div class="navlinks">
           <ul>
             <li><a href="../../index.html">Home</a></li>
-            <li><a href="/projects.html">Projects</a></li>
-            <li><a href="/resume.html">Resume</a></li>
+            <li><a href="./projects.html">Projects</a></li>
+            <li><a href="./resume.html">Resume</a></li>
             <li><a class="activeLink" href="#">Contact</a></li>
+            <li><a href=".././finalProject.html">Javascript Project</a></li>
           </ul>
         </div>
       </div>
@@ -33,7 +35,7 @@
         <div class="row">
           <div class="tiles">
             <a class="tile" href="https://www.linkedin.com/in/tor-erik-brown-69142a191/">
-              <img src="../../img/LinkedIn-Icon.png"/>
+              <img src="../../img/LinkedIn-Icon.png" alt="LinkedIn Icon"/>
               <div class="details">
                   <span class="title">Linkdin</span>
               </div>
@@ -41,7 +43,7 @@
           </div>
           <div class="tiles">
             <a class="tile" href="https://www.instagram.com/torerik.brown/">
-              <img src="../../img/instagramlogo.png"/>
+              <img src="../../img/instagramlogo.png" alt="Instagram Icon"/>
               <div class="details">
                 <span class="title">Instagram</span>
               </div>
