--- a/index.html
+++ b/index.html
@@ -6,7 +6,7 @@
     <title>Home</title>
       <link rel="stylesheet" href="CSS/styles.css">
       <script src="./Javascript/scripts.js" defer></script>
-      <script src="./Javascript/navbar.js" defer></script>
+      <!-- <script src="./Javascript/navbar.js" defer></script> -->
   </head>
   <body>
       <div class="navbar">
